nav was jumping under logo between screen width 640 and 660. Shortened logo width by 20px to correct this.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ textarea {
 }
 
 #logo {
-    width: 350px;
+    width: 330px;
     height: 90px;
     float: left;
     text-align: center;
